fix: TransactionPanel overflow

--- a/src/components/SendTransaction/SendTransaction.module.scss
+++ b/src/components/SendTransaction/SendTransaction.module.scss
@@ -30,7 +30,6 @@
 
       .panel {
         flex: 1;
-        overflow-y: auto;
         padding: 30px 40px;
   
         &:first-child {
